Closed Bug 656260 Opened 15 years ago Closed 15 years ago

Showing/Hidding bundle package doesn't behave correctly

Categories

(Core :: Widget: Cocoa, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla6

People

(Reporter: mounir, Assigned: mounir)

Details

Attachments

(1 file)

Follow-up from bug 651477.
Attached patch Simple patchSplinter Review
Attachment #531595 - Flags: review?(joshmoz)
Whiteboard: [needs review]
Looks like the patch in bug 355894 is relevant history here.
Attachment #531595 - Flags: review?(joshmoz) → review+
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Flags: in-testsuite?
Resolution: --- → FIXED
Whiteboard: [needs review]
Target Milestone: --- → mozilla6
Depends on: 662261
No longer depends on: 662261
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: