Bug 656260 - Showing/Hidding bundle package doesn't behave correctly. r=joshmoz