widget/src/cocoa/nsFilePicker.mm
@@ -294,8 +294,7 @@ static
 void UpdatePanelFileTypes(NSOpenPanel* aPanel, NSArray* aFilters)
 {
   // If we show all file types, also "expose" bundles' contents.
-  // FIXME: the code seems to do the exact opposite, this bug 656260.
-  [aPanel setTreatsFilePackagesAsDirectories:!!aFilters];
+  [aPanel setTreatsFilePackagesAsDirectories:!aFilters];
 
   [aPanel setAllowedFileTypes:aFilters];
 }
@@ -396,9 +395,8 @@ nsFilePicker::GetLocalFiles(const nsString& inTitle, PRBool inAllowMultiple, nsC
     [observer release];
   } else {
     // If we show all file types, also "expose" bundles' contents.
-    // FIXME: the code seems to do the exact opposite, this bug 656260.
     if (!filters) {
-      [thePanel setTreatsFilePackagesAsDirectories:NO];
+      [thePanel setTreatsFilePackagesAsDirectories:YES];
     }
     result = [thePanel runModalForDirectory:theDir file:nil types:filters];
   }
